more translations; tweaks to service year; some minor layout changes

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -18,6 +18,7 @@
     "ViewPage.viewMainCharacter": "Hauptcharakter anzeigen",
     "ViewPage.viewStarship": "Raumschiff ansehen",
     "ViewPage.errorMessage": "Die Dinge sind schrecklich, schrecklich schief gelaufen. Wir könnten uns im Spiegeluniversum befinden.",
+    "ViewPage.unnamedStarship": "Unbenanntes Raumschiff",
 
     "GMTracker.title": "Aufspürer",
     "GMTracker.instruction": "Benutze dieses Tool, um verschiedene NPCs in deinem Spiel zu verwalten.",
@@ -38,15 +39,27 @@
 
     "Construct.other.assignment": "Zuweisung",
     "Construct.other.attributes": "Attribute",
+    "Construct.other.crew": "Mannschaft",
+    "Construct.other.departments": "Abteilungen",
     "Construct.other.disciplines": "Disziplinen",
     "Construct.other.environment": "Umwelt",
     "Construct.other.equipment": "Ausrüstung",
     "Construct.other.focuses": "Konzentriert sich",
+    "Construct.other.missionProfile": "Missionsprofil",
     "Construct.other.name": "Name",
     "Construct.other.pronouns": "Pronomen",
+    "Construct.other.power": "Macht",
     "Construct.other.rank": "Rang",
+    "Construct.other.refits": "Umbauten",
+    "Construct.other.resistance": "Widerstand",
+    "Construct.other.scale": "Maßstab",
+    "Construct.other.serviceDate": "Service-Datum",
+    "Construct.other.shields": "Schilde",
+    "Construct.other.spaceFrame": "Raumfachwerk",
+    "Construct.other.specialRules": "Besondere Regeln",
     "Construct.other.species": "Spezies",
     "Construct.other.stress": "Stress",
+    "Construct.other.systems": "Systeme",
     "Construct.other.talents": "Begabungen",
     "Construct.other.traits": "Charakterzüge",
     "Construct.other.upbringing": "Erziehung",
@@ -66,6 +79,20 @@
     "Construct.discipline.engineering": "Ingenieurwesen",
     "Construct.discipline.science": "Wissenschaft",
     "Construct.discipline.medicine": "Medizin",
+
+    "Construct.department.command": "Befehl",
+    "Construct.department.conn": "Steuerung",
+    "Construct.department.security": "Sicherheit",
+    "Construct.department.engineering": "Ingenieurwesen",
+    "Construct.department.science": "Wissenschaft",
+    "Construct.department.medicine": "Medizin",
+
+    "Construct.system.comms": "Kommunikation",
+    "Construct.system.computer": "Computer",
+    "Construct.system.engines": "Motoren",
+    "Construct.system.sensors": "Sensoren",
+    "Construct.system.structure": "Struktur",
+    "Construct.system.weapons": "Waffen",
 
     "Page.title.home": "Homepage",
     "Page.title.era": "Ära",
