--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -18,6 +18,7 @@
     "ViewPage.viewMainCharacter": "View Main Character",
     "ViewPage.viewStarship": "View Starship",
     "ViewPage.errorMessage": "Things have gone terribly, terribly wrong. We might be in the mirror universe.",
+    "ViewPage.unnamedStarship": "Unnamed Starship",
 
     "GMTracker.title": "Tracker",
     "GMTracker.instruction": "Use this tool to manage various NPCs in your game.",
@@ -38,15 +39,27 @@
 
     "Construct.other.assignment": "Assignment",
     "Construct.other.attributes": "Attributes",
+    "Construct.other.crew": "Crew",
+    "Construct.other.departments": "Departments",
     "Construct.other.disciplines": "Disciplines",
     "Construct.other.environment": "Environment",
     "Construct.other.equipment": "Equipment",
     "Construct.other.focuses": "Focuses",
+    "Construct.other.missionProfile": "Mission Profile",
     "Construct.other.name": "Name",
     "Construct.other.pronouns": "Pronouns",
+    "Construct.other.power": "Power",
     "Construct.other.rank": "Rank",
+    "Construct.other.refits": "Refits",
+    "Construct.other.resistance": "Resistance",
+    "Construct.other.scale": "Scale",
+    "Construct.other.serviceDate": "Service Date",
+    "Construct.other.shields": "Shields",
+    "Construct.other.spaceFrame": "Space Frame",
+    "Construct.other.specialRules": "Special Rules",
     "Construct.other.species": "Species",
     "Construct.other.stress": "Stress",
+    "Construct.other.systems": "Systems",
     "Construct.other.talents": "Talents",
     "Construct.other.traits": "Traits",
     "Construct.other.upbringing": "Upbringing",
@@ -66,6 +79,20 @@
     "Construct.discipline.engineering": "Engineering",
     "Construct.discipline.science": "Science",
     "Construct.discipline.medicine": "Medicine",
+
+    "Construct.department.command": "Command",
+    "Construct.department.conn": "Conn",
+    "Construct.department.security": "Security",
+    "Construct.department.engineering": "Engineering",
+    "Construct.department.science": "Science",
+    "Construct.department.medicine": "Medicine",
+
+    "Construct.system.comms": "Comms",
+    "Construct.system.computer": "Computer",
+    "Construct.system.engines": "Engines",
+    "Construct.system.sensors": "Sensors",
+    "Construct.system.structure": "Structure",
+    "Construct.system.weapons": "Weapons",
 
     "Page.title.home": "Home",
     "Page.title.era": "Era",
