--- a/WebTools/src/i18n/locales/es/translations.json
+++ b/WebTools/src/i18n/locales/es/translations.json
@@ -18,6 +18,7 @@
     "ViewPage.viewMainCharacter": "Ver personaje principal",
     "ViewPage.viewStarship": "Ver nave espacial",
     "ViewPage.errorMessage": "Las cosas han ido terriblemente, terriblemente mal. Podríamos estar en el universo espejo.",
+    "ViewPage.unnamedStarship": "Nave espacial sin nombre",
 
     "GMTracker.title": "Rastreador",
     "GMTracker.instruction": "Usa esta herramienta para administrar varios NPC en tu juego.",
@@ -38,15 +39,27 @@
 
     "Construct.other.assignment": "Asignación",
     "Construct.other.attributes": "Atributos",
+    "Construct.other.crew": "Tripulación",
+    "Construct.other.departments": "Departamentos",
     "Construct.other.disciplines": "Disciplinas",
     "Construct.other.environment": "Medio ambiente",
     "Construct.other.equipment": "Equipo",
     "Construct.other.focuses": "Atenciónes",
+    "Construct.other.missionProfile": "Perfil de la misión",
     "Construct.other.name": "Nombre",
     "Construct.other.pronouns": "Pronombres",
+    "Construct.other.power": "Poder",
     "Construct.other.rank": "Rango",
+    "Construct.other.refits": "Refits",
+    "Construct.other.resistance": "Resistencia",
+    "Construct.other.scale": "Escama",
+    "Construct.other.serviceDate": "Fecha de servicio",
+    "Construct.other.shields": "Escudos",
+    "Construct.other.spaceFrame": "Malla espacial",
+    "Construct.other.specialRules": "Reglas especiales",
     "Construct.other.species": "Especie",
     "Construct.other.stress": "Estrés",
+    "Construct.other.systems": "Sistemas",
     "Construct.other.talents": "Talentos",
     "Construct.other.traits": "Rasgos",
     "Construct.other.upbringing": "Cría",
@@ -66,6 +79,20 @@
     "Construct.discipline.engineering": "Ingeniería",
     "Construct.discipline.science": "Ciencia",
     "Construct.discipline.medicine": "Medicina",
+
+    "Construct.department.command": "Mandar",
+    "Construct.department.conn": "Pilotaje",
+    "Construct.department.security": "Seguridad",
+    "Construct.department.engineering": "Ingeniería",
+    "Construct.department.science": "Ciencia",
+    "Construct.department.medicine": "Medicina",
+
+    "Construct.system.comms": "Comunicación",
+    "Construct.system.computer": "Ordenador",
+    "Construct.system.engines": "Motores",
+    "Construct.system.sensors": "Sensores",
+    "Construct.system.structure": "Estructura",
+    "Construct.system.weapons": "Armas",
 
     "Page.title.home": "Página principal",
     "Page.title.era": "Era",
