--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -18,6 +18,7 @@
     "ViewPage.viewMainCharacter": "Voir le personnage principal",
     "ViewPage.viewStarship": "Voir le vaisseau spatial",
     "ViewPage.errorMessage": "Les choses ont terriblement, terriblement mal tourné. Nous pourrions être dans l'univers miroir.",
+    "ViewPage.unnamedStarship": "Vaisseau sans nom",
 
     "GMTracker.title": "Pisteur",
     "GMTracker.instruction": "Utilisez cet outil pour gérer divers PNJ dans votre jeu.",
@@ -38,15 +39,27 @@
 
     "Construct.other.assignment": "Mission",
     "Construct.other.attributes": "Attributs",
+    "Construct.other.crew": "Équipage",
+    "Construct.other.departments": "Ministères",
     "Construct.other.disciplines": "Disciplines",
     "Construct.other.environment": "Environnement",
     "Construct.other.equipment": "Équipement",
     "Construct.other.focuses": "Foyers",
+    "Construct.other.missionProfile": "Profil de la mission",
     "Construct.other.name": "Nom",
     "Construct.other.pronouns": "Pronoms",
+    "Construct.other.power": "Pouvoir",
     "Construct.other.rank": "Rang",
+    "Construct.other.refits": "Réaménagements",
+    "Construct.other.resistance": "Résistance",
+    "Construct.other.scale": "Écaille",
+    "Construct.other.serviceDate": "Date de signification",
+    "Construct.other.shields": "Boucliers",
+    "Construct.other.spaceFrame": "Cadre spatial",
+    "Construct.other.specialRules": "Règles spéciales",
     "Construct.other.species": "Espèce",
     "Construct.other.stress": "Stress",
+    "Construct.other.systems": "Systèmes",
     "Construct.other.talents": "Talents",
     "Construct.other.traits": "Traits",
     "Construct.other.upbringing": "Élevage",
@@ -66,6 +79,20 @@
     "Construct.discipline.engineering": "Ingénierie",
     "Construct.discipline.science": "Science",
     "Construct.discipline.medicine": "Médecine",
+
+    "Construct.department.command": "Commander",
+    "Construct.department.conn": "Pilotage",
+    "Construct.department.security": "Sécurité",
+    "Construct.department.engineering": "Ingénierie",
+    "Construct.department.science": "Science",
+    "Construct.department.medicine": "Médecine",
+
+    "Construct.system.comms": "Valeurs de communication",
+    "Construct.system.computer": "Ordinateur",
+    "Construct.system.engines": "Moteur",
+    "Construct.system.sensors": "Capteurs",
+    "Construct.system.structure": "Structure",
+    "Construct.system.weapons": "Armes",
 
     "Page.title.home": "Page d'accueil",
     "Page.title.era": "Ère",
