prepare for custom species -- at the moment, they're only available to supporting characters; per #119, implement an export to JSON feature (also only available for supporting characters at the moment)

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -32,10 +32,12 @@
     "Common.button.select": "Auswählen",
     "Common.button.selectAll": "Alle auswählen",
     "Common.button.selectNone": "Wählen Sie Keine",
+    "Common.button.exportJson": "Export nach JSON",
     "Common.button.exportPdf": "Als PDF exportieren",
     "Common.button.ok": "Okay",
     "Common.button.add": "Hinzufügen",
     "Common.button.cancel": "Abbrechen",
+    "Common.button.next": "Nächster",
 
     "Construct.other.assignment": "Zuweisung",
     "Construct.other.attributes": "Attribute",
