- minor clean up and changes to the PDF exporter; new French translations via betatester

--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -3,10 +3,10 @@
     "LanguageNotice.text": "Nous expérimentons un soutien initial pour les langues nationales. Nous sommes dans une phase très préliminaire, mais nous espérons être en mesure de prendre en charge plus de langues, bientôt.",
     "LanguageNotice.useEnglish": "Utiliser l'anglais",
 
-    "Lcars.copyright": "STAR TREK et les marques et logos associés sont des marques de commerce de CBS Studios Inc. Tous droits réservés.",
+    "Lcars.copyright": "STAR TREK et les marques et logos associés sont des marques commerciales de CBS Studios Inc. Tous droits réservés.",
     "Lcars.credits": "Crédits",
 
-    "EraSelectionPage.sourceInstruction": "Sélectionnez les sources. Demandez à votre GM lesquels sont disponibles.",
+    "EraSelectionPage.sourceInstruction": "Sélectionnez les sources. Demandez à votre MJ lesquels sont disponibles.",
     "EraSelectionPage.sourceNote": "Certaines sources ne sont pas encore mises en œuvre; Revenez bientôt!",
     "EraSelectionPage.eraInstruction": "Sélectionnez l'ère dans laquelle jouer. Demandez à votre MJ quelle ère choisir.",
 
@@ -20,18 +20,18 @@
     "ViewPage.errorMessage": "Les choses ont terriblement, terriblement mal tourné. Nous pourrions être dans l'univers miroir.",
     "ViewPage.unnamedStarship": "Vaisseau sans nom",
 
-    "GMTracker.title": "Pisteur",
+    "GMTracker.title": "Suivi",
     "GMTracker.instruction": "Utilisez cet outil pour gérer divers PNJ dans votre jeu.",
-    "GMTracker.addCharacterModalTitle": "Ajouter un caractère",
+    "GMTracker.addCharacterModalTitle": "Ajouter un personnage",
 
-    "AddCharacterView.instruction": "Collez l'URL d'un caractère.",
+    "AddCharacterView.instruction": "Collez l'URL d'un personnage.",
     "AddCharacterView.errorMessage": "Cette URL ne semble pas valide.",
     "AddCharacterView.errorCharacterType": "Nous ne supportons que les personnages, pour le moment. Pas des vaisseaux spatiaux.",
     "AddCharacterView.characterPrefix": "Personnage:",
 
     "StarshipToolSelection.instruction": "Sélectionnez une option",
     "StarshipToolSelection.standardBuild": "Construction standard",
-    "StarshipToolSelection.standardBuildDescription": "Le processus standard de création de Starship suit les étapes de construction décrites dans les livres de règles. Par exemple: les vaisseaux spatiaux choisissent une trame spatiale, un profil de mission, etc.",
+    "StarshipToolSelection.standardBuildDescription": "Le processus standard de création d'un Vaisseau suit les étapes de construction décrites dans les livres de règles. Par exemple: les vaisseaux spatiaux choisissent une trame spatiale, un profil de mission, etc.",
     "StarshipToolSelection.simplifiedBuild": "Construction simplifiée",
     "StarshipToolSelection.simplifiedBuildDescription": "La version simplifiée est une bonne option pour transcrire un ensemble de statistiques, par exemple à partir d'une source en ligne ou d'une autre référence.",
 
@@ -48,54 +48,54 @@
     "Construct.other.assignment": "Mission",
     "Construct.other.attributes": "Attributs",
     "Construct.other.crew": "Équipage",
-    "Construct.other.departments": "Ministères",
+    "Construct.other.departments": "Departements",
     "Construct.other.disciplines": "Disciplines",
     "Construct.other.environment": "Environnement",
     "Construct.other.equipment": "Équipement",
-    "Construct.other.focuses": "Foyers",
-    "Construct.other.missionProfile": "Profil de la mission",
+    "Construct.other.focuses": "Spécialités",
+    "Construct.other.missionProfile": "Profil de mission",
     "Construct.other.name": "Nom",
     "Construct.other.pronouns": "Pronoms",
-    "Construct.other.power": "Pouvoir",
+    "Construct.other.power": "Puissance",
     "Construct.other.rank": "Rang",
-    "Construct.other.refits": "Réaménagements",
+    "Construct.other.refits": "Mises à jour",
     "Construct.other.resistance": "Résistance",
-    "Construct.other.scale": "Écaille",
-    "Construct.other.serviceDate": "Date de signification",
+    "Construct.other.scale": "Echelle",
+    "Construct.other.serviceDate": "Date de mise en service",
     "Construct.other.shields": "Boucliers",
-    "Construct.other.spaceFrame": "Cadre spatial",
+    "Construct.other.spaceFrame": "Armature",
     "Construct.other.specialRules": "Règles spéciales",
     "Construct.other.species": "Espèce",
     "Construct.other.stress": "Stress",
     "Construct.other.systems": "Systèmes",
     "Construct.other.talents": "Talents",
     "Construct.other.traits": "Traits",
-    "Construct.other.upbringing": "Élevage",
+    "Construct.other.upbringing": "Education",
     "Construct.other.values": "Valeurs",
     "Construct.other.weapons": "Armes",
 
     "Construct.attribute.control": "Contrôle",
-    "Construct.attribute.daring": "Audacieux",
-    "Construct.attribute.fitness": "Aptitude",
+    "Construct.attribute.daring": "Audace",
+    "Construct.attribute.fitness": "Forme Physique",
     "Construct.attribute.insight": "Perspicacité",
     "Construct.attribute.presence": "Présence",
     "Construct.attribute.reason": "Raison",
 
-    "Construct.discipline.command": "Commander",
+    "Construct.discipline.command": "Commandement",
     "Construct.discipline.conn": "Pilotage",
     "Construct.discipline.security": "Sécurité",
     "Construct.discipline.engineering": "Ingénierie",
     "Construct.discipline.science": "Science",
     "Construct.discipline.medicine": "Médecine",
 
-    "Construct.department.command": "Commander",
+    "Construct.department.command": "Commandement",
     "Construct.department.conn": "Pilotage",
     "Construct.department.security": "Sécurité",
     "Construct.department.engineering": "Ingénierie",
     "Construct.department.science": "Science",
     "Construct.department.medicine": "Médecine",
 
-    "Construct.system.comms": "Valeurs de communication",
+    "Construct.system.comms": "Communications",
     "Construct.system.computer": "Ordinateur",
     "Construct.system.engines": "Moteur",
     "Construct.system.sensors": "Capteurs",
@@ -113,7 +113,7 @@
     "Page.title.sectorDetails": "Détails du secteur",
     "Page.title.starSystemDetails": "Détails du système stellaire",
     "Page.title.starshipToolSelection": "Outils de vaisseau spatial",
-    "Page.title.gamemasterTrackerPage": "Pistage",
+    "Page.title.gamemasterTrackerPage": "Suivi",
 
     "Page.breadcrumb.characterCreation": "Création de personnages"
 }
