--- a/translation/translations.csv
+++ b/translation/translations.csv
@@ -2,9 +2,9 @@ Language,en,de,es,fr
 LanguageNotice.title,Hello There!,Hallo,¡Hola!,Salut!
 LanguageNotice.text,"We're experimenting with some initial support for national languages. We're in a very preliminary stage, but we hope to be able to support more languages, soon.","Wir experimentieren mit einer anfänglichen Unterstützung für Landessprachen. Wir befinden uns in einem sehr frühen Stadium, aber wir hoffen, bald weitere Sprachen unterstützen zu können.","Estamos experimentando con algún soporte inicial para los idiomas nacionales. Estamos en una etapa muy preliminar, pero esperamos poder soportar más idiomas, pronto.","Nous expérimentons un soutien initial pour les langues nationales. Nous sommes dans une phase très préliminaire, mais nous espérons être en mesure de prendre en charge plus de langues, bientôt."
 LanguageNotice.useEnglish,Use English instead,Englisch verwenden,Usar inglés,Utiliser l'anglais
-Lcars.copyright,STAR TREK and related marks and logos are trademarks of CBS Studios Inc. All Rights Reserved.,STAR TREK und zugehörige Marken und Logos sind Marken von CBS Studios Inc. Alle Rechte vorbehalten.,STAR TREK y las marcas y logotipos relacionados son marcas comerciales de CBS Studios Inc. Todos los derechos reservados.,STAR TREK et les marques et logos associés sont des marques de commerce de CBS Studios Inc. Tous droits réservés.
+Lcars.copyright,STAR TREK and related marks and logos are trademarks of CBS Studios Inc. All Rights Reserved.,STAR TREK und zugehörige Marken und Logos sind Marken von CBS Studios Inc. Alle Rechte vorbehalten.,STAR TREK y las marcas y logotipos relacionados son marcas comerciales de CBS Studios Inc. Todos los derechos reservados.,STAR TREK et les marques et logos associés sont des marques commerciales de CBS Studios Inc. Tous droits réservés.
 Lcars.credits,Credits,Kredite,Créditos,Crédits
-EraSelectionPage.sourceInstruction,Select sources. Ask your GM which are available.,"Wählen Sie Quellen aus. Fragen Sie Ihren GM, welche verfügbar sind.",Seleccione las fuentes. Pregúntele a su GM cuáles están disponibles.,Sélectionnez les sources. Demandez à votre GM lesquels sont disponibles.
+EraSelectionPage.sourceInstruction,Select sources. Ask your GM which are available.,"Wählen Sie Quellen aus. Fragen Sie Ihren GM, welche verfügbar sind.",Seleccione las fuentes. Pregúntele a su GM cuáles están disponibles.,Sélectionnez les sources. Demandez à votre MJ lesquels sont disponibles.
 EraSelectionPage.sourceNote,Some sources are not yet implemented; check back soon!,Einige Quellen sind noch nicht implementiert; Schauen Sie bald wieder vorbei!,Algunas fuentes aún no se han aplicado; ¡Vuelve pronto!,Certaines sources ne sont pas encore mises en œuvre; Revenez bientôt!
 EraSelectionPage.eraInstruction,Select which Era to play in. Ask your GM which Era to choose.,"Wählen Sie aus, in welcher Ära gespielt werden soll. Fragen Sie Ihren GM, welche Ära Sie wählen sollen.",Selecciona en qué Era jugar. Pregúntale a tu GM qué Era elegir.,Sélectionnez l'ère dans laquelle jouer. Demandez à votre MJ quelle ère choisir.
 Home.selection,Select tool.,Werkzeug auswählen.,Seleccione la herramienta.,Sélectionnez l'outil.
@@ -15,16 +15,16 @@ ViewPage.viewMainCharacter,View Main Character,Hauptcharakter anzeigen,Ver perso
 ViewPage.viewStarship,View Starship,Raumschiff ansehen,Ver nave espacial,Voir le vaisseau spatial
 ViewPage.errorMessage,"Things have gone terribly, terribly wrong. We might be in the mirror universe.","Die Dinge sind schrecklich, schrecklich schief gelaufen. Wir könnten uns im Spiegeluniversum befinden.","Las cosas han ido terriblemente, terriblemente mal. Podríamos estar en el universo espejo.","Les choses ont terriblement, terriblement mal tourné. Nous pourrions être dans l'univers miroir."
 ViewPage.unnamedStarship,Unnamed Starship,Unbenanntes Raumschiff,Nave espacial sin nombre,Vaisseau sans nom
-GMTracker.title,Tracker,Aufspürer,Rastreador,Pisteur
+GMTracker.title,Tracker,Aufspürer,Rastreador,Suivi
 GMTracker.instruction,Use this tool to manage various NPCs in your game.,"Benutze dieses Tool, um verschiedene NPCs in deinem Spiel zu verwalten.",Usa esta herramienta para administrar varios NPC en tu juego.,Utilisez cet outil pour gérer divers PNJ dans votre jeu.
-GMTracker.addCharacterModalTitle,Add Character,Charakter hinzufügen,Agregar carácter,Ajouter un caractère
-AddCharacterView.instruction,Paste in the URL for a character.,Fügen Sie die URL für ein Zeichen ein.,Pegue la URL de un carácter.,Collez l'URL d'un caractère.
+GMTracker.addCharacterModalTitle,Add Character,Charakter hinzufügen,Agregar carácter,Ajouter un personnage
+AddCharacterView.instruction,Paste in the URL for a character.,Fügen Sie die URL für ein Zeichen ein.,Pegue la URL de un carácter.,Collez l'URL d'un personnage.
 AddCharacterView.errorMessage,This url does not look valid.,Diese URL sieht nicht gültig aus.,Esta URL no parece válida.,Cette URL ne semble pas valide.
 AddCharacterView.errorCharacterType,"Whoops! We only support characters, at the moment. Not starships.",Hoppla! Wir unterstützen im Moment nur Charaktere. Keine Raumschiffe.,"¡Gritos! Solo admitimos personajes, por el momento. No naves espaciales.","Nous ne supportons que les personnages, pour le moment. Pas des vaisseaux spatiaux."
 AddCharacterView.characterPrefix,Character:,Zeichen:,Carácter:,Personnage:
 StarshipToolSelection.instruction,Select an option,Wählen Sie eine Option,Seleccione una opción,Sélectionnez une option
 StarshipToolSelection.standardBuild,Standard Build,Standardausführung,Construcción estándar,Construction standard
-StarshipToolSelection.standardBuildDescription,"The standard Starship creation process follows the build steps as outlined in the rulebooks. E.g.: starships choose a Spaceframe, Mission Profile, etc.","Der Standard-Raumschiff-Erstellungsprozess folgt den Build-Schritten, wie in den Regelwerken beschrieben. Z.B.: Raumschiffe wählen einen Spaceframe, ein Missionsprofil usw.","El proceso estándar de creación de Starship sigue los pasos de compilación descritos en los libros de reglas. Por ejemplo: las naves espaciales eligen un marco espacial, un perfil de misión, etc.","Le processus standard de création de Starship suit les étapes de construction décrites dans les livres de règles. Par exemple: les vaisseaux spatiaux choisissent une trame spatiale, un profil de mission, etc."
+StarshipToolSelection.standardBuildDescription,"The standard Starship creation process follows the build steps as outlined in the rulebooks. E.g.: starships choose a Spaceframe, Mission Profile, etc.","Der Standard-Raumschiff-Erstellungsprozess folgt den Build-Schritten, wie in den Regelwerken beschrieben. Z.B.: Raumschiffe wählen einen Spaceframe, ein Missionsprofil usw.","El proceso estándar de creación de Starship sigue los pasos de compilación descritos en los libros de reglas. Por ejemplo: las naves espaciales eligen un marco espacial, un perfil de misión, etc.","Le processus standard de création d'un Vaisseau suit les étapes de construction décrites dans les livres de règles. Par exemple: les vaisseaux spatiaux choisissent une trame spatiale, un profil de mission, etc."
 StarshipToolSelection.simplifiedBuild,Simplified Build,Vereinfachter Aufbau,Compilación simplificada,Construction simplifiée
 StarshipToolSelection.simplifiedBuildDescription,"The Simplified build is a good option for transcribing a set of stats, say from an online source or other other reference.","Der vereinfachte Build ist eine gute Option zum Transkribieren einer Reihe von Statistiken, Z. B. aus einer Online-Quelle oder einer anderen Referenz.","La compilación simplificada es una buena opción para transcribir un conjunto de estadísticas, por ejemplo, de una fuente en línea u otra referencia.","La version simplifiée est une bonne option pour transcrire un ensemble de statistiques, par exemple à partir d'une source en ligne ou d'une autre référence."
 Common.button.select,Select,Auswählen,Escoger,Choisir
@@ -39,50 +39,50 @@ Common.button.next,Next,Nächster,Próximo,Prochain
 Construct.other.assignment,Assignment,Zuweisung,Asignación,Mission
 Construct.other.attributes,Attributes,Attribute,Atributos,Attributs
 Construct.other.crew,Crew,Mannschaft,Tripulación,Équipage
-Construct.other.departments,Departments,Abteilungen,Departamentos,Ministères
+Construct.other.departments,Departments,Abteilungen,Departamentos,Departements
 Construct.other.disciplines,Disciplines,Disziplinen,Disciplinas,Disciplines
 Construct.other.environment,Environment,Umwelt,Medio ambiente,Environnement
 Construct.other.equipment,Equipment,Ausrüstung,Equipo,Équipement
-Construct.other.focuses,Focuses,Konzentriert sich,Atenciónes,Foyers
-Construct.other.missionProfile,Mission Profile,Missionsprofil,Perfil de la misión,Profil de la mission
+Construct.other.focuses,Focuses,Konzentriert sich,Atenciónes,Spécialités
+Construct.other.missionProfile,Mission Profile,Missionsprofil,Perfil de la misión,Profil de mission
 Construct.other.name,Name,Name,Nombre,Nom
 Construct.other.pronouns,Pronouns,Pronomen,Pronombres,Pronoms
-Construct.other.power,Power,Macht,Poder,Pouvoir
+Construct.other.power,Power,Macht,Poder,Puissance
 Construct.other.rank,Rank,Rang,Rango,Rang
-Construct.other.refits,Refits,Umbauten,Refits,Réaménagements
+Construct.other.refits,Refits,Umbauten,Refits,Mises à jour
 Construct.other.resistance,Resistance,Widerstand,Resistencia,Résistance
-Construct.other.scale,Scale,Maßstab,Escama,Écaille
-Construct.other.serviceDate,Service Date,Service-Datum,Fecha de servicio,Date de signification
+Construct.other.scale,Scale,Maßstab,Escama,Echelle
+Construct.other.serviceDate,Service Date,Service-Datum,Fecha de servicio,Date de mise en service
 Construct.other.shields,Shields,Schilde,Escudos,Boucliers
-Construct.other.spaceFrame,Space Frame,Raumfachwerk,Malla espacial,Cadre spatial
+Construct.other.spaceFrame,Space Frame,Raumfachwerk,Malla espacial,Armature
 Construct.other.specialRules,Special Rules,Besondere Regeln,Reglas especiales,Règles spéciales
 Construct.other.species,Species,Spezies,Especie,Espèce
 Construct.other.stress,Stress,Stress,Estrés,Stress
 Construct.other.systems,Systems,Systeme,Sistemas,Systèmes
 Construct.other.talents,Talents,Begabungen,Talentos,Talents
 Construct.other.traits,Traits,Charakterzüge,Rasgos,Traits
-Construct.other.upbringing,Upbringing,Erziehung,Cría,Élevage
+Construct.other.upbringing,Upbringing,Erziehung,Cría,Education
 Construct.other.values,Values,Werte,Valores,Valeurs
 Construct.other.weapons,Weapons,Waffen,Armas,Armes
 Construct.attribute.control,Control,Steuerung,Control,Contrôle
-Construct.attribute.daring,Daring,Gewagt,Atrevido,Audacieux
-Construct.attribute.fitness,Fitness,Fitness,Aptitud,Aptitude
+Construct.attribute.daring,Daring,Gewagt,Atrevido,Audace
+Construct.attribute.fitness,Fitness,Fitness,Aptitud,Forme Physique
 Construct.attribute.insight,Insight,Einblick,Visión,Perspicacité
 Construct.attribute.presence,Presence,Anwesenheit,Presencia,Présence
 Construct.attribute.reason,Reason,Grund,Razón,Raison
-Construct.discipline.command,Command,Befehl,Mandar,Commander
+Construct.discipline.command,Command,Befehl,Mandar,Commandement
 Construct.discipline.conn,Conn,Steuerung,Pilotaje,Pilotage
 Construct.discipline.security,Security,Sicherheit,Seguridad,Sécurité
 Construct.discipline.engineering,Engineering,Ingenieurwesen,Ingeniería,Ingénierie
 Construct.discipline.science,Science,Wissenschaft,Ciencia,Science
 Construct.discipline.medicine,Medicine,Medizin,Medicina,Médecine
-Construct.department.command,Command,Befehl,Mandar,Commander
+Construct.department.command,Command,Befehl,Mandar,Commandement
 Construct.department.conn,Conn,Steuerung,Pilotaje,Pilotage
 Construct.department.security,Security,Sicherheit,Seguridad,Sécurité
 Construct.department.engineering,Engineering,Ingenieurwesen,Ingeniería,Ingénierie
 Construct.department.science,Science,Wissenschaft,Ciencia,Science
 Construct.department.medicine,Medicine,Medizin,Medicina,Médecine
-Construct.system.comms,Comms,Kommunikation,Comunicación,Valeurs de communication
+Construct.system.comms,Comms,Kommunikation,Comunicación,Communications
 Construct.system.computer,Computer,Computer,Ordenador,Ordinateur
 Construct.system.engines,Engines,Motoren,Motores,Moteur
 Construct.system.sensors,Sensors,Sensoren,Sensores,Capteurs
@@ -99,5 +99,5 @@ Page.title.systemGeneration,System Generation,Sternsystem-Generation,Generación
 Page.title.sectorDetails,Sector Details,Branchendetails,Detalles del sector,Détails du secteur
 Page.title.starSystemDetails,Star System Details,Details zum Sternensystem,Detalles del sistema Star,Détails du système stellaire
 Page.title.starshipToolSelection,Starship Tool Selection,Raumschiff-Werkzeuge,Herramientas de naves espaciales,Outils de vaisseau spatial
-Page.title.gamemasterTrackerPage,Tracking,Verfolgung,Seguimiento,Pistage
+Page.title.gamemasterTrackerPage,Tracking,Verfolgung,Seguimiento,Suivi
 Page.breadcrumb.characterCreation,Character Creation,Charaktererstellung,Creación de personajes,Création de personnages
